--- a/Favorite-Toys/app/src/main/AndroidManifest.xml
+++ b/Favorite-Toys/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".datafrominternet.MainActivity">
+        <!--<activity android:name=".datafrominternet.MainActivity">-->
+        <activity android:name=".explicitintent.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
